public class FolderItem extends File {
    String name;
    int a=0;


}
